# wavemark

./: Cargo.toml  LICENSE  README.md  setup-github-secrets.sh
.cargo/: config.toml
.github/workflows/: publish.yml
bindings/: README.md
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/.cargo/: config.toml
bindings/python/examples/: basic_usage.py
bindings/python/python/wavemark/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_basic_functionality.py  test_comprehensive.py
bindings/typescript/: Cargo.toml  README.md  package.json
bindings/typescript/.cargo/: config.toml
bindings/typescript/examples/: basic_usage.ts
bindings/typescript/src/: lib.rs
bindings/typescript/tests/: basic_functionality.test.ts
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/tests/: build_test.rs
crates/decoder/: Cargo.toml
crates/decoder/tests/: build_test.rs
crates/encoder/: Cargo.toml
crates/encoder/tests/: build_test.rs
crates/fourier/: Cargo.toml
crates/fourier/tests/: build_test.rs
docs/: BUILD_VERIFICATION.md  README.md  format.md
docs/wavemark/format/: README.md
scripts/: README.md  quick_test.sh  run_all_tests.sh
wavemark/: Cargo.toml
wavemark/examples/: basic_usage.rs
wavemark/src/: lib.rs
wavemark/src/api/: builder.rs  mod.rs
wavemark/src/core/: mod.rs  state.rs  types.rs
wavemark/src/decoder/: mod.rs
wavemark/src/detect/: confidence.rs  correlator.rs  mod.rs
wavemark/src/embed/: mod.rs  params.rs  payload_mapper.rs  spread_spectrum.rs
wavemark/src/encoder/: mod.rs
wavemark/src/format/: codec.rs  encryption.rs  mod.rs  payload.rs
wavemark/src/fourier/: mod.rs
wavemark/src/key/: derivation.rs  mod.rs
wavemark/src/pipeline/: mod.rs
wavemark/src/pipeline/pre_vocoder/: buffer.rs  controller.rs  mod.rs
wavemark/src/streaming/: mod.rs  session.rs
wavemark/src/transforms/: fft.rs  mod.rs  window.rs
wavemark/tests/: format_payload.rs  test_api.rs  test_decoder.rs  test_encoder.rs  test_fourier.rs
