[package]
name = "wavemark"
version = "0.1.0"
edition = "2021"
description = "Audio watermarking library for AI voice generators"
license = "MIT"
repository = "https://github.com/your-org/wavemark"
keywords = ["audio", "watermarking", "ai", "voice"]
categories = ["audio", "cryptography", "multimedia"]

[lib]
name = "wavemark"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[dependencies]
