[package]
name = "wavemark"
version = "0.1.0"
edition = "2021"
description = "Audio watermarking library for AI voice generators"
license = "MIT"
repository = "https://github.com/your-org/wavemark"
keywords = ["audio", "watermarking", "ai", "voice"]
categories = ["audio", "cryptography", "multimedia"]

[lib]
name = "wavemark"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[dependencies]
# Audio signal processing
realfft = "3.4"

# Audio file handling
hound = "3.5"

# Cryptography
hkdf = "0.12"
sha2 = "0.10"
rand_chacha = "0.3"
chacha20poly1305 = "0.10"

# Error correction
reed-solomon-erasure = "6.0"
