[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wavemark"
version = "0.1.0"
description = "Audio watermarking library for AI voice generators"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Wavemark Contributors"},
]
keywords = ["audio", "watermarking", "ai", "voice", "python", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/your-org/wavemark"
Repository = "https://github.com/your-org/wavemark"
Documentation = "https://wavemark.readthedocs.io"
"Bug Tracker" = "https://github.com/your-org/wavemark/issues"

[tool.maturin]
python-source = "python"
module-name = "wavemark"
