[package]
name = "wavemark-typescript"
version = "0.1.0"
edition = "2021"
description = "TypeScript/WebAssembly bindings for Wavemark audio watermarking library"
license = "MIT"
repository = "https://github.com/your-org/wavemark"
keywords = ["audio", "watermarking", "ai", "voice", "typescript", "wasm"]
categories = ["audio", "cryptography", "multimedia", "wasm"]

[lib]
name = "wavemark_typescript"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wavemark = { workspace = true }

